--- a/Frontend/login.html
+++ b/Frontend/login.html
@@ -13,8 +13,7 @@
       <p class="subtitle">Access to your account</p>
       <img src="assets/images/robot.png" alt="Robot" class="robot-img">
     </div>
-
-    <div class="form-container">
+    <form class="form-container">
       <div class="form-input">
         <input type="email" id="email" placeholder="Email">
       </div>
@@ -22,7 +21,7 @@
         <input type="password" id="password" placeholder="Password">
       </div>
       <button class="primary-btn" onclick="handleLogin()">Sign In</button>
-    </div>
+    </form>
 
     <div class="oauth">
       <p class="oauth-text">Or Sign In With</p>
