--- a/Frontend/signup.html
+++ b/Frontend/signup.html
@@ -14,18 +14,22 @@
       <img src="assets/images/robot.png" alt="Robot" class="robot-img">
     </div>
 
-    <div class="form-container">
+    <div id="errorContainer" class="error-message"></div>
+
+    <form id="signupForm" class="form-container">
       <div class="form-input">
-        <input type="email" id="email" placeholder="Email">
+        <label for="email">
+        <input type="email" id="email" name="email" placeholder="Email" required><br>
+
+        <label for="password">
+        <input type="password" id="password" name="password" placeholder="Password" required><br>
+
+        <label for="confirmPassword">
+        <input type="password" id="confirmPassword" name="confirmPassword" placeholder="Confirm Password" required>
       </div>
-      <div class="form-input">
-        <input type="password" id="password" placeholder="Password">
-      </div>
-      <div class="form-input">
-        <input type="password" id="confirmPassword" placeholder="Confirm Password">
-      </div>
-      <button class="primary-btn" onclick="handleSignup()">Sign Up</button>
-    </div>
+      <button type="submit" class="primary-btn">Sign Up</button>
+    </form>
+
     <div class="sign-up">
       <p class="subtitle">Already have an account?
         <a href="login.html" class="signup-link">Login</a>
